# bville-recycle

./: .env.test  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  Rocket.toml  SECURITY.md  requirements.md
.github/workflows/: rust-clippy.yml  rust.yml  unsafe.yml
sql/: create_test_db.sql  init.sql
src/: db_initializer.rs  db_utils.rs  lib.rs  main.rs  users.rs
static/: md-badge
tests/: basic_actions.rs  clippy.rs  crud.rs  map_entries.rs  routes.rs  unsafe_check.rs  users.rs
